--- a/gb/19/4/17/n11192807.md
+++ b/gb/19/4/17/n11192807.md
@@ -1,19 +1,19 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/wpigor3084/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/wpigor3084/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/wpigor3084/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/wpigor3084/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/wpigor3084/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/wpigor3084/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/wpigor3084/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/wpigor3084/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/wpigor3084/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/wpigor3084/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/wpigor3084/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/wpigor3084/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/wpigor3084/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/wpigor3084/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/wpigor3084/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/wpigor3084/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/wpigor3084/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/wpigor3084/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/wpigor3084/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/wpigor3084/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/wpigor3084/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/wpigor3084/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/wpigor3084/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/wpigor3084/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/wpigor3084/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/wpigor3084/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/wpigor3084/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/wpigor3084/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/wpigor3084/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/wpigor3084/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/wpigor3084/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/wpigor3084/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/wpigor3084/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/wpigor3084/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/wpigor3084/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/wpigor3084/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/wpigor3084/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/wpigor3084/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/wpigor3084/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/wpigor3084/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/wpigor3084/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/wpigor3084/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/wpigor3084/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/wpigor3084/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/wpigor3084/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/wpigor3084/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/wpigor3084/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hoxgwd311/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>肖顿否认提高退休金税率 两党选举论战加剧</h2>
 
 <h6></h6>
 <hr>
-<p>【大纪元2019年04月17日讯】（大纪元记者肖婕澳洲悉尼编译报导）联邦工党领袖肖顿（Bill Shorten）有关其<ahref="https://github.com/wpigor3084/djy/blob/master/gb/tag/%E9%80%80%E4%BC%91%E9%87%91.md#1">退休金</a>政策的言论引发了一场政治风波。他向选民表示，他“没有计划”提高退休金税，但工党的四项大选政策，却要在未来10年增加至少189亿<ahref="https://github.com/wpigor3084/djy/blob/master/gb/tag/%E6%BE%B3%E5%85%83.md#1">澳元</a>的税收。总理莫里森说肖顿“肯定忘了”工党的增加税收政策。</p>
-<p>在包括更严格的<ahref="https://github.com/wpigor3084/djy/blob/master/gb/tag/%E9%80%80%E4%BC%91%E9%87%91.md#1">退休金</a>供款上限以及对高收入人士征收更高税的工党税收计划下，100多万人可能将为他们的退休金缴纳更多的税。</p>
+<p>【大纪元2019年04月17日讯】（大纪元记者肖婕澳洲悉尼编译报导）联邦工党领袖肖顿（Bill Shorten）有关其<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E9%80%80%E4%BC%91%E9%87%91.md#1">退休金</a>政策的言论引发了一场政治风波。他向选民表示，他“没有计划”提高退休金税，但工党的四项大选政策，却要在未来10年增加至少189亿<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E6%BE%B3%E5%85%83.md#1">澳元</a>的税收。总理莫里森说肖顿“肯定忘了”工党的增加税收政策。</p>
+<p>在包括更严格的<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E9%80%80%E4%BC%91%E9%87%91.md#1">退休金</a>供款上限以及对高收入人士征收更高税的工党税收计划下，100多万人可能将为他们的退休金缴纳更多的税。</p>
 <p>据悉尼晨锋报报导，莫里森说，如果联盟党获得连任，他不会改革退休金政策，并称肖顿“肯定忘了”工党要提高税收的政策。</p>
 <p>周三，财政部和财务部发布了大选前的财政展望报告，这一更新报告将为选举活动设定预算基准。这可能会加剧竞选中两党在经济问题上的辩论。</p>
 <p>政府对工党的负扣税、资本利得税、股息重复课税减免（Dividend Imputation）、家庭信托和退休金的税务改革政策进行了分析，结果显示，这些税改将在10年内增加1570亿元税收。</p>
 <p>金融服务公司赖斯-华纳（Rice Warner）公司的主管赖斯（Michael Rice）表示，工党的退休金政策完全可以看作是增税，其取消股息重复课税减免，在未来10年增加560亿元税收的计划也是一样，“‘不征收新税’的说法似乎有点违背其政策。”他说。</p>
 <p>周二，当记者问肖顿是否会排除推出新税和提高退休金税的可能性时，他做了笼统的保证，但没有提及他的政策，“我们没有提高退休金税的计划，”他说。</p>
 <p>工党与退休金有关的政策包括：</p>
-<p>1、降低<ahref="https://github.com/wpigor3084/djy/blob/master/gb/tag/%E9%AB%98%E6%94%B6%E5%85%A5%E8%80%85.md#1">高收入者</a>的退休金供款税起征点。这意味着年薪20万元以上的人缴纳的退休金税，将按标准税率15%的2倍征收。而这个税率目前是针对年薪25万元以上的高收入者。政府估计13万人将因此缴纳更多的税。</p>
+<p>1、降低<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E9%AB%98%E6%94%B6%E5%85%A5%E8%80%85.md#1">高收入者</a>的退休金供款税起征点。这意味着年薪20万元以上的人缴纳的退休金税，将按标准税率15%的2倍征收。而这个税率目前是针对年薪25万元以上的高收入者。政府估计13万人将因此缴纳更多的税。</p>
 <p>2、废除政府允许“补交退休金供款”的规定。该规定允许几年内没有缴付退休金供款的人一次补齐供款。在政府目前的规定下，选择不向自己的退休基金供款2.5万元达4年的人，可以在第5年一次性缴纳供款12.5万元。工党将取消这项规定。政府估计将有23万人受影响。</p>
 <p>3、取消政府允许更多小企业主用其个人退休金供款扣税，这将影响到约80万人。</p>
 <p>4、将非优惠退休金供款上限从10万元减至7.5万元，并限制人们将遗产等一次性资金投入退休基金。估计这会影响到2万人。</p>
@@ -27,48 +27,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/wpigor3084/djy/blob/master/gb/18/3/26/n10250021.md#1">零工经济兴起 数百万澳人无退休金引改革呼吁</a></li>
-<li><a href="https://github.com/wpigor3084/djy/blob/master/gb/18/5/29/n10436302.md#1">报告：退休金系统存结构性缺陷需彻底改革</a></li>
-<li><a href="https://github.com/wpigor3084/djy/blob/master/gb/18/7/17/n10568621.md#1">澳百强公司总裁收入不断增高恐遭股东抗议</a></li>
-<li><a href="https://github.com/wpigor3084/djy/blob/master/gb/18/8/6/n10618025.md#1">皇家委员会已对澳洲退休金业展开调查</a></li>
-<li><a href="https://github.com/wpigor3084/djy/blob/master/gb/18/10/30/n10817687.md#1">分析报告：退休金投错门回报差距巨大</a></li>
-<li><a href="https://github.com/wpigor3084/djy/blob/master/gb/19/2/7/n11029480.md#1">合并退休金账户法案若通过 65万维州人将获益</a></li>
-<li><a href="https://github.com/wpigor3084/djy/blob/master/gb/19/2/12/n11039142.md#1">新州自供养老金者将得政府资助</a></li>
-<li><a href="https://github.com/wpigor3084/djy/blob/master/gb/19/2/21/n11059724.md#1">南澳人将重获3.4亿退休金</a></li>
-<li><a href="https://github.com/wpigor3084/djy/blob/master/gb/19/2/21/n11060062.md#1">女性退休金远不及男性 呼吁照料者积分制</a></li>
-<li><a href="https://github.com/wpigor3084/djy/blob/master/gb/20/10/27/n12506787.md#1">首都工党连任?四项承诺与家庭及物业有关</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/3/26/n10250021.md#1">零工经济兴起 数百万澳人无退休金引改革呼吁</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/5/29/n10436302.md#1">报告：退休金系统存结构性缺陷需彻底改革</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/7/17/n10568621.md#1">澳百强公司总裁收入不断增高恐遭股东抗议</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/8/6/n10618025.md#1">皇家委员会已对澳洲退休金业展开调查</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/10/30/n10817687.md#1">分析报告：退休金投错门回报差距巨大</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/19/2/7/n11029480.md#1">合并退休金账户法案若通过 65万维州人将获益</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/19/2/12/n11039142.md#1">新州自供养老金者将得政府资助</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/19/2/21/n11059724.md#1">南澳人将重获3.4亿退休金</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/19/2/21/n11060062.md#1">女性退休金远不及男性 呼吁照料者积分制</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/20/n13741385.md#1">法律专家吁加强移民工人保护 防止雇主剥削</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/4/n9921539.md#1" target="_blank">尹曙生：产粮大省为何饿死人</a></li><li><a href="https://github.com/wpigor3084/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/5/n10955468.md#1" target="_blank">出版24年 42种语言 拥有全球读者的转法轮</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank">303万人举报江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/4/n10615598.md#1" target="_blank">卞世传：江泽民篡改扬州抗日史的卑劣无耻</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/26/n11280869.md#1" target="_blank">谴责中共活摘器官 美密苏里州通过决议案</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/epczec374/djy/blob/master/gb/20/10/14/n12475763.md#1">轮回转生名案：4岁娃难忘前生情 丈夫儿子来相认</a></li>
-<li><a href="https://github.com/epczec374/djy/blob/master/gb/20/10/22/n12494562.md#1">张爱玲的家世 晚清历史里的先人</a></li>
-<li><a href="https://github.com/epczec374/djy/blob/master/gb/20/9/30/n12442831.md#1">《圣经》与《推背图》预言的应验与变换3</a></li>
-<li><a href="https://github.com/epczec374/djy/blob/master/gb/20/9/3/n12378293.md#1">【西安事变?蒋宋夫妇】引狼入室 西安谋主</a></li>
-<li><a href="https://github.com/epczec374/djy/blob/master/gb/20/8/10/n12318958.md#1">【命理】怎样才能知道自己是做生意的命？</a></li>
-<li><a href="https://github.com/epczec374/djy/blob/master/gb/20/10/27/n12504507.md#1">【西岸观察】巴雷特大法官上任 有利华人维权</a></li>
-<li><a href="https://github.com/epczec374/djy/blob/master/gb/20/10/27/n12504722.md#1">【纽约调查】纽约华警间谍案 法官检控官这么说</a></li>
-<li><a href="https://github.com/epczec374/djy/blob/master/gb/20/10/27/n12504359.md#1">【一线采访视频版】学者：从反川到挺川的改变</a></li>
-<li><a href="https://github.com/epczec374/djy/blob/master/gb/20/10/20/n12487817.md#1">塞满你的冰箱 14种值得在Costco买的冷冻食品</a></li>
-<li><a href="https://github.com/epczec374/djy/blob/master/gb/20/10/25/n12500356.md#1">外滩金融峰会 马云发言被指大胆 耐人寻味</a></li>
-<li><a href="https://github.com/epczec374/djy/blob/master/gb/20/10/25/n12501333.md#1">【役情最前线】王岐山露面释三大信号</a></li>
-<li><a href="https://github.com/epczec374/djy/blob/master/gb/20/10/25/n12501371.md#1">港星爆拍戏趣事：演员爱吃道具饭皆因周润发</a></li>
-<li><a href="https://github.com/epczec374/djy/blob/master/gb/20/10/25/n12501492.md#1">迎候老婆高圆圆下班 赵又廷俏皮蹲下请安</a></li>
-<li><a href="https://github.com/epczec374/djy/blob/master/gb/20/10/26/n12503856.md#1">高圆圆女儿抓周全场嗨翻 赵树海谈孙女眉飞色舞</a></li>
-<li><a href="https://github.com/epczec374/djy/blob/master/gb/20/10/23/n12497828.md#1">女星高定礼服来源遭疑 范冰冰造型师否认借出</a></li>
-<li><a href="https://github.com/epczec374/djy/blob/master/gb/20/10/27/n12504942.md#1">袁惟仁惊传跌倒再陷昏迷 住进加护病房</a></li>
-<li><a href="https://github.com/epczec374/djy/blob/master/gb/20/9/10/n12393841.md#1">看不惯饲主遛狗不清便？用这招威力超猛</a></li>
-<li><a href="https://github.com/epczec374/djy/blob/master/gb/20/10/26/n12502059.md#1">洗衣店时尚阿公阿嬷红到国外 引蔡英文拜访</a></li>
-<li><a href="https://github.com/epczec374/djy/blob/master/gb/20/10/25/n12500289.md#1">不一样的德国特产──意大利面冰淇淋</a></li>
-<li><a href="https://github.com/epczec374/djy/blob/master/gb/20/10/25/n12500332.md#1">容易移动和部署 俄军用充气坦克欺敌</a></li>
-<li><a href="https://github.com/epczec374/djy/blob/master/gb/20/10/25/n12500137.md#1">身在几百公里天外 美国女太空人完成投票</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/24/n11971400.md#1">最新翻墙软件 突破封锁访问大纪元新唐人</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/25/n11972610.md#1">6万武汉人封城前外逃 路线与欧美疫情吻合？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/25/n11974512.md#1">【新闻看点】习将出席G20峰会 国际问责不断</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/25/n11972094.md#1">捂不住了 大陆金融系统至少千人染中共病毒</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/25/n11972775.md#1">你中奖了吗？109年1-2月统一发票兑奖资讯</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/25/n11973180.md#1">辛龙憔悴赴灵堂 瞒着女儿说：妈妈去旅行了</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/25/n11973870.md#1">辛龙灵堂伴妻5小时 双手合十离开未受访</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/24/n11969412.md#1">刘真灵堂预计25日开放 追思会下月举行</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/24/n11971575.md#1">宣传新片时自称亚裔 刘亦菲遭大陆网民骂翻</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/23/n11967623.md#1">晒合照悼念刘真 翁虹：遗憾无法实现舞林之约</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/22/n11962482.md#1">《推背图》第7象归序 谈庚子流年</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/23/n11967225.md#1">成规模毁灭事件中的悬案 明朝王恭厂大爆炸</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/2/27/n11900217.md#1">【历史上的瘟疫】上帝之鞭：欧洲黑死病</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/24/n11969439.md#1">中国古代的“飞天”舞蹈家</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/24/n11970004.md#1">老僧从冥府归来 传信给行恶的官员们</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/wpigor3084/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/wpigor3084/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/4/17/n11192807.htm">肖顿否认提高退休金税率 两党选举论战加剧</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/4/17/n11192807.htm">肖顿否认提高退休金税率 两党选举论战加剧</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/wpigor3084/djy/blob/master/gb/19/4/17/n11192807.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/wpigor3084/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wpigor3084/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/wpigor3084/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/wpigor3084/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/wpigor3084/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wpigor3084/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/wpigor3084/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wpigor3084/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/wpigor3084/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wpigor3084/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/wpigor3084/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wpigor3084/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/wpigor3084/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wpigor3084/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/wpigor3084/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wpigor3084/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/wpigor3084/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wpigor3084/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/wpigor3084/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wpigor3084/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/wpigor3084/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wpigor3084/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/wpigor3084/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wpigor3084/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/wpigor3084/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wpigor3084/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/wpigor3084/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wpigor3084/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/wpigor3084/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wpigor3084/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/wpigor3084/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wpigor3084/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/wpigor3084/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wpigor3084/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/wpigor3084/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wpigor3084/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/wpigor3084/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wpigor3084/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/wpigor3084/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wpigor3084/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/wpigor3084/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wpigor3084/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/wpigor3084/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wpigor3084/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/wpigor3084/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wpigor3084/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/wpigor3084/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wpigor3084/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hoxgwd311/djy/blob/master/gb/19/4/17/n11192807.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
